--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
             </div>
             
         </div>
+        <div class="content">            
+            <div class="contentleft">
+                <div class="uppertext">
+                    <h1>NIKE</h1>
+                    <h2>JUST DO IT</h2>
+                </div>
+            </div>
+            <div class="contentright">
+
+            </div>
+
+        </div>
     </div>
 </body>
 </html>
