--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
                     <h1>NIKE</h1>
                     <h2>JUST DO IT</h2>
                 </div>
+                <div class="bottontext">
+                    <h1>2019</h1>
+                    <h2>AIR MAX</h2>
+                    <H3>270</H3>
+                </div>
+                <img src="img/shoe.png" alt="Shoes">
             </div>
             <div class="contentright">
 
