--- a/index.html
+++ b/index.html
@@ -48,6 +48,23 @@
                 <img src="img/shoe.png" alt="Shoes">
             </div>
             <div class="contentright">
+                <img src="img/logobig.png" alt="">
+                <div class="produtsdetails">
+                    <div class="pricebox">
+                        <div class="price">
+                            <h2>AIR MAX</h2>
+                            <h1>270</h1>                            
+                            <H3>$299</H3>
+                        </div>
+                        <div class="variant">
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                        </div>
+                    </div>
+                </div>
 
             </div>
 
