--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
                             <div></div>
                         </div>
                     </div>
+                    <p>ADD TO Cart</p>
+                </div>
+                <div class="social">
+                    <ul>
+                        <li> <a href="#">Instagram</a></li>
+                        <li> <a href="#">Twiter</a></li>
+                        <li> <a href="#">Facebook</a></li>                        
+                    </ul>
                 </div>
 
             </div>
