--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,7 +25,7 @@
             </div>
             <div class="navbarright">
                 <ul>
-                    <li> <a href="#"> <img src="img/lupa.png" alt="Seach"></a></li>
+                    <li> <a href="#"><img src="img/lupa.png" alt="Seach"></a></li>
                     <li> <a href="#"><img src="img/cart.png" alt="Shopping Cart"></a></li>
                     <li> <a href="#"> <img src="img/list.png" alt=""> </a></li>
                     
@@ -68,9 +68,9 @@
                 </div>
                 <div class="social">
                     <ul>
-                        <li> <a href="#">Instagram</a></li>
-                        <li> <a href="#">Twiter</a></li>
-                        <li> <a href="#">Facebook</a></li>                        
+                        <li> <a href="#"> <img id="instagram" src="img/instagram.png" alt="">Instagram</a></li>
+                        <li> <a href="#"> <img src="" alt=""> Twiter</a></li>
+                        <li> <a href="#"> <img src="img/facebook.png" alt=""> Facebook</a></li>                        
                     </ul>
                 </div>
 
